--- a/src/comicagg/static/base/css/base.css
+++ b/src/comicagg/static/base/css/base.css
@@ -2,184 +2,258 @@
 /* General CSS rules */
 /*********************/
 body {
-	font-family:sans-serif;
-	font-size:9pt;
-	color:#333;
-	padding:0;
-	margin:0;
-	background:transparent url(../img/bg/trama.gif) top left;
-	min-width:800px;
+    font-family: sans-serif;
+    font-size: 9pt;
+    color: #333;
+    padding: 0;
+    margin: 0;
+    background: transparent url(../img/bg/trama.gif) top left;
+    min-width: 800px;
 }
 a {
-	color:#333;
-	text-decoration:underline;
-	text-shadow:#ccc 1px 1px 1px;
+    color: #333;
+    text-decoration: underline;
+    text-shadow: #ccc 1px 1px 1px;
 }
-a:hover, a:visited:hover {
-	color:#6b98b5;
-	cursor:pointer;
+a:hover,
+a:visited:hover {
+    color: #6b98b5;
+    cursor: pointer;
 }
 a:visited {
-	color:#444;
+    color: #444;
 }
 .text_left {
-	text-align:left;
+    text-align: left;
 }
 .text_right {
-	text-align:right;
+    text-align: right;
 }
 .text_center {
-	text-align:center;
+    text-align: center;
 }
 .bolder {
-    font-weight:bolder;
+    font-weight: bolder;
 }
 #content {
-	margin-top:40px;
-	padding:0em 2em;
+    margin-top: 40px;
+    padding: 0em 2em;
 }
-input, button {
-	background-color:#f0f0f0;
-	color:#333;
-	border:1px solid gray;
-        border-radius:5px;
-	padding:1px 3px;
+input,
+button {
+    background-color: #f0f0f0;
+    color: #333;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 1px 3px;
 }
 button:hover {
-	background-color:#ddd;
-	border-color:#6b98b5;
+    background-color: #ddd;
+    border-color: #6b98b5;
 }
-.center { text-align:center }
+
+.center {
+    text-align: center;
+}
+
+.w90 {
+    width: 90%;
+}
+
+.br {
+    border: 1px gray solid;
+    border-radius: 15px;
+    background-color: white;
+    padding: 15px;
+}
+
+.mc {
+    margin: 0 auto 0 auto;
+}
+
+.mb15px {
+    margin-bottom: 15px;
+}
+
+.mt15px {
+    margin-top: 15px;
+}
+
+.bg-red {
+    background-color: #ffcccc;
+}
+
+.ta-l {
+    text-align: left;
+}
+
+.ta-r {
+    text-align: right;
+}
+
+/****************/
+/* Cookie notice*/
+/****************/
+
+.cookie_notice_buttons {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1em;
+}
+
+.cookie_notice_buttons .form {
+    display: inline;
+}
+
+#cookie_notice input {
+    padding: 5px 10px;
+}
+
+#popover_consent {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #fccbcb;
+    padding: 50px;
+    border: 3px solid gray;
+    border-radius: 15px;
+    text-align: center;
+    z-index: 1000;
+}
 
 /***********/
 /* Top Menu*/
 /***********/
 
 #head {
-	color:white;
-	padding: 10px 1em 2px 1em;
-	height:28px; /*40-h*/
-	background:transparent url(../img/bg/background.png) top center repeat-x;
-	position:fixed;
-	left:0;
-	right:0;
-	top:0;
-	text-shadow:#45545D 1px 1px 1px;
-    z-index:100;
+    color: white;
+    padding: 10px 1em 2px 1em;
+    height: 28px; /*40-h*/
+    background: transparent url(../img/bg/background.png) top center repeat-x;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    text-shadow: #45545d 1px 1px 1px;
+    z-index: 100;
 }
 #head a {
-	color:white;
-    text-shadow:#45545D 1px 1px 1px;
+    color: white;
+    text-shadow: #45545d 1px 1px 1px;
 }
 #head a:hover {
-	color:#ddd;
+    color: #ddd;
 }
 #head_right {
-	float:right;
-	min-width:25%;
-	text-align:right;
+    float: right;
+    min-width: 25%;
+    text-align: right;
 }
 #head_left {
-	float:left;
-	min-width:25%;
+    float: left;
+    min-width: 25%;
 }
 #branding {
-	text-align:center;
-	font-weight:bolder;
+    text-align: center;
+    font-weight: bolder;
 }
 #branding a {
-	text-decoration:none;
+    text-decoration: none;
 }
 #quickgotobutton {
-	border:1px solid white;
-	text-decoration:none;
-	padding:0px 2px;
+    border: 1px solid white;
+    text-decoration: none;
+    padding: 0px 2px;
 }
 
 /***************/
 /* Login views */
 /***************/
 
-.loginbox, .box {
-	border:1px gray solid;
-        border-radius:15px;
-	background-color:white;
-	width:500px;
-	margin:10% auto 0px auto;
-	text-align:center;
-	padding:15px;
+.loginbox,
+.box {
+    border: 1px gray solid;
+    border-radius: 15px;
+    background-color: white;
+    width: 500px;
+    margin: 10% auto 0px auto;
+    text-align: center;
+    padding: 15px;
 }
-.loginbox:hover, .loginbox input:hover {
-	border-color: #7cb9ff;
-	border-color: #8baec1;
+.loginbox:hover,
+.loginbox input:hover {
+    border-color: #7cb9ff;
+    border-color: #8baec1;
 }
 #login_wrap {
-	margin-top:20px;
+    margin-top: 20px;
 }
 #login_wrap table {
-	margin:auto;
-	text-align:right;
+    margin: 2em auto 0 auto;
+    text-align: right;
 }
 .loginbox input {
-	border:1px solid gray;
-	border-radius:3px;
-	padding:2px;
+    border: 1px solid gray;
+    border-radius: 3px;
+    padding: 5px 10px;
 }
 .loginbox input:focus {
-	border-width:2px;
+    border-width: 2px;
 }
 #register_wrap {
-	width:700px;
-	margin-top:60px;
+    width: 700px;
+    margin-top: 60px;
 }
 
 #register_table td {
-	vertical-align:text-top;
-	padding-bottom:5px;
-	text-align:left;
+    vertical-align: text-top;
+    padding-bottom: 5px;
+    text-align: left;
 }
-#register_table tr>:first-child {
-	text-align:right;
-	padding-right:5px;
+#register_table tr > :first-child {
+    text-align: right;
+    padding-right: 5px;
 }
 
 #errorContainer {
-	border:1px solid red;
-	border-radius:4px;
-	background-color:#ffcccc;
-	padding:5px;
-	text-align:left;
+    border: 1px solid red;
+    border-radius: 4px;
+    background-color: #ffcccc;
+    padding: 5px;
+    text-align: left;
 }
 .error_tr input {
-	border-color:red;
+    border-color: red;
 }
 
 .errorlist {
-	color:red;
-	margin:3px;
-	padding-left:15px;
+    color: red;
+    margin: 3px;
+    padding-left: 15px;
 }
 
 .errorlist li {
 }
 
 .oauth2_page {
-	min-width:450px;
-	background: white;
+    min-width: 450px;
+    background: white;
 }
 .oauth2_box {
-	width:450px;
-	margin:15px auto;
-	text-align: center;
+    width: 450px;
+    margin: 15px auto;
+    text-align: center;
 }
 .oauth2_box fieldset {
-	border:0;
+    border: 0;
 }
 
 .oauth2_box ul {
-	padding:5px;
-	padding-left:40px;
-	margin:10px auto;
+    padding: 5px;
+    padding-left: 40px;
+    margin: 10px auto;
 }
 
 /*************/
@@ -187,87 +261,87 @@ button:hover {
 /*************/
 
 #read .extras_div {
-	float:right;
-	text-align:right;
+    float: right;
+    text-align: right;
 }
 
 #read .comic {
-	border:1px solid gray;
-	background-color:white;
-	border-radius:10px;
-	padding:5px 1em 5px 1em;
-	margin-bottom:20px;
-/* 	position:relative; */
+    border: 1px solid gray;
+    background-color: white;
+    border-radius: 10px;
+    padding: 5px 1em 5px 1em;
+    margin-bottom: 20px;
+    /* 	position:relative; */
 }
 #read .comic h3 {
-	margin:0;
-	padding:0;
-	font-size:12pt;
+    margin: 0;
+    padding: 0;
+    font-size: 12pt;
 }
 #read .comic .striplist {
-	margin:5px auto 5px auto;
-	text-align:center;
+    margin: 5px auto 5px auto;
+    text-align: center;
 }
 #read .comic .striplist .alttext {
-    margin:3px auto 10px auto;
+    margin: 3px auto 10px auto;
 }
 #read .comic .comicextra {
-	border-top:1px dashed gray;
+    border-top: 1px dashed gray;
 }
 #read .comic .comicextra a {
-	text-decoration:none;
+    text-decoration: none;
 }
 #read .comic .comicextra img {
-	vertical-align:middle;
-	border:0;
+    vertical-align: middle;
+    border: 0;
 }
 #read .comic .comicextra .reload {
-	font-weight:bolder;
+    font-weight: bolder;
 }
 #read .comic .comicextra .wrap {
-	margin-left:6px;
+    margin-left: 6px;
 }
 #read .comic .comicextra .anims {
-	float:left;
-	width:20px;
+    float: left;
+    width: 20px;
 }
 #read .comic .newstripsnotice {
-	color:orange;
-	font-weight:bolder;
-	float:left;
-/*     position:absolute; */
+    color: orange;
+    font-weight: bolder;
+    float: left;
+    /*     position:absolute; */
 }
 #read .info {
-	margin:0;
-	padding:0;
+    margin: 0;
+    padding: 0;
 }
 #read .top_info {
-	position:relative;
-	background:white;
-	border:1px solid #eeeeee;
-	padding:2px;
-	margin-bottom:10px;
-	border-radius:4pt;
-/* 	z-index:-10; */
+    position: relative;
+    background: white;
+    border: 1px solid #eeeeee;
+    padding: 2px;
+    margin-bottom: 10px;
+    border-radius: 4pt;
+    /* 	z-index:-10; */
 }
 #read .top_info div {
-	text-align:right;
-	position:absolute;
-	right:3px;
-	bottom:3px;
+    text-align: right;
+    position: absolute;
+    right: 3px;
+    bottom: 3px;
 }
 #read .top_info div img {
-	vertical-align:middle;
+    vertical-align: middle;
 }
 
 #next_comic_bar {
     position: fixed;
-    right:5px;
-    bottom:5px;
+    right: 5px;
+    bottom: 5px;
     background-color: white;
-    border:1px solid gray;
-    padding:2px;
-    border-radius:4pt;
+    border: 1px solid gray;
+    padding: 2px;
+    border-radius: 4pt;
 }
 
 /******************/
@@ -275,90 +349,95 @@ button:hover {
 /******************/
 
 #organize .comic_list {
-	font-size:9pt;
-	border:1px solid gray;
-	border-radius:8pt;
-	padding:5px;
-/* 	line-height:14pt; */
-	background:white;
-	margin-bottom:2em;
-	margin-top:1.5em;
-	clear:both;
+    font-size: 9pt;
+    border: 1px solid gray;
+    border-radius: 8pt;
+    padding: 5px;
+    /* 	line-height:14pt; */
+    background: white;
+    margin-bottom: 2em;
+    margin-top: 1.5em;
+    clear: both;
 }
 #organize .comic_list .item {
 }
-#organize .comic_list .name, .comic_list .score, .comic_list .votes {
-	display:none;
+#organize .comic_list .name,
+.comic_list .score,
+.comic_list .votes {
+    display: none;
 }
 #organize .dndContainer {
-	cursor: default;
+    cursor: default;
 }
 /*.dojoDndContainerOver {
 }*/
-#organize .dojoDndItem { 
-	background:white;
-	float:left;
-	border:1px solid gray;
-	padding:2px 12px;
-	margin:0px 3px 3px 0px;
-	border-radius:5pt 5pt;
+#organize .dojoDndItem {
+    background: white;
+    float: left;
+    border: 1px solid gray;
+    padding: 2px 12px;
+    margin: 0px 3px 3px 0px;
+    border-radius: 5pt 5pt;
 }
 #organize .dojoDndItemOver {
-	background: #ededed;
-	cursor:pointer;
+    background: #ededed;
+    cursor: pointer;
 }
 #organize .dojoDndItemSelected {
-	background: #ccddff; color: #444;
+    background: #ccddff;
+    color: #444;
 }
 #organize .dojoDndItemAnchor {
-	background: #ccddff; color: black;
+    background: #ccddff;
+    color: black;
 }
 #organize .dojoDndItemOver .dojoDndItemSelected {
-	background: #ccddff;
+    background: #ccddff;
 }
 #organize .dojoDndItemOver .dojoDndItemAnchor {
-	background: #ededed;
+    background: #ededed;
 }
 #organize .dojoDndItemBefore {
-	background:url(../img/2leftarrow_bw10.png) #ccc left center no-repeat;
+    background: url(../img/2leftarrow_bw10.png) #ccc left center no-repeat;
 }
 #organize .dojoDndItemAfter {
-	background:url(../img/2rightarrow_bw10.png) #ccc right center no-repeat;
+    background: url(../img/2rightarrow_bw10.png) #ccc right center no-repeat;
 }
 #organize .dojoDndAvatar {
-	border:2px solid #ccc;
-	font-size: 75%;
-	radius:8pt;
-	border-radius:8pt 8pt;
-	background:white;
+    border: 2px solid #ccc;
+    font-size: 75%;
+    radius: 8pt;
+    border-radius: 8pt 8pt;
+    background: white;
 }
 #organize .dojoDndAvatarHeader {
-	background: #aaa;
+    background: #aaa;
 }
 #organize .dojoDndAvatarItem {
-	background: #fff;
-	border-bottom:1px solid #666;
+    background: #fff;
+    border-bottom: 1px solid #666;
 }
 #trash {
-/* 	width:48px; */
-	height:48px;
-/* 	border:1px solid gray; */
-	padding-right:50px;
-	float:right;
-	vertical-align:middle;
-	background:url(../img/trash.png) right center no-repeat transparent;
-	cursor:pointer;
+    /* 	width:48px; */
+    height: 48px;
+    /* 	border:1px solid gray; */
+    padding-right: 50px;
+    float: right;
+    vertical-align: middle;
+    background: url(../img/trash.png) right center no-repeat transparent;
+    cursor: pointer;
 }
 #organize .save {
-	float:left;
-	cursor:pointer;
+    float: left;
+    cursor: pointer;
 }
 #organize .save img {
-	vertical-align:middle;
+    vertical-align: middle;
 }
 
-#organize p, #add > p {
-    margin:0 0 1em 2em;
+#organize p,
+#add > p {
+    margin: 0 0 1em 2em;
 }
 
 /************/
@@ -366,117 +445,117 @@ button:hover {
 /************/
 
 #comic_list_wrap {
-	width:350px;
-    position:relative;
+    width: 350px;
+    position: relative;
 }
 #comic_list_wrap p {
-	height:24px;
-	margin:0;
+    height: 24px;
+    margin: 0;
 }
 #comic_list_wrap > span {
-    position:absolute;
-    right:0;
-    top:4px;
-    font-size:smaller;
+    position: absolute;
+    right: 0;
+    top: 4px;
+    font-size: smaller;
 }
 #comic_list {
-	border:1px solid gray;
-	border-width:1px 0px 1px 1px;
-	list-style-type:none;
-	margin:0;
-	margin-top:8px;
-	padding:0;
-	overflow:scroll;
-	overflow-x:hidden;
-	clear:both;
-	background-color:white;
+    border: 1px solid gray;
+    border-width: 1px 0px 1px 1px;
+    list-style-type: none;
+    margin: 0;
+    margin-top: 8px;
+    padding: 0;
+    overflow: scroll;
+    overflow-x: hidden;
+    clear: both;
+    background-color: white;
 }
 #comic_list .comic {
-/* 	width:300px; */
-	padding:2px 0px;
-	text-align:center;
-	border-bottom:1px solid gray;
-	border-left:0px solid gray;
-	background:white;
-	cursor:pointer;
+    /* 	width:300px; */
+    padding: 2px 0px;
+    text-align: center;
+    border-bottom: 1px solid gray;
+    border-left: 0px solid gray;
+    background: white;
+    cursor: pointer;
 }
 #comic_list .comic:hover {
-	background-color:#ccc;
+    background-color: #ccc;
 }
 #comic_list .last {
-	border-bottom:0;
+    border-bottom: 0;
 }
 #comic_list .added {
-	background:#ccddff /*url(../img/ok12.png)*/ right center no-repeat;
-    font-weight:bolder;
+    background: #ccddff /*url(../img/ok12.png)*/ right center no-repeat;
+    font-weight: bolder;
 }
 #comic_list .working {
-    background:url(../img/loading12.gif) right center no-repeat;
+    background: url(../img/loading12.gif) right center no-repeat;
 }
 #comic_list .new {
-	background:#ddffcc /*url(../img/flag12.png)*/ right center no-repeat;
+    background: #ddffcc /*url(../img/flag12.png)*/ right center no-repeat;
 }
 #comic_list .error {
-    background:url(../img/error12.png) right center no-repeat;
+    background: url(../img/error12.png) right center no-repeat;
 }
 #comic_list .noimages:after {
-	content: url(../img/warning12.png);
-	vertical-align:middle;
+    content: url(../img/warning12.png);
+    vertical-align: middle;
 }
 #comic_new {
-	color:orange;
+    color: orange;
 }
 #comic_info_outer {
-	position:absolute;
-	margin-left:360px;
-	top:70px;
-	right:10px;
-	left:30px;
-	bottom:10px;
+    position: absolute;
+    margin-left: 360px;
+    top: 70px;
+    right: 10px;
+    left: 30px;
+    bottom: 10px;
 }
 #comic_info_outer > p {
-    padding:0px 0px 5px 0px;
-    margin:0;
-    text-align:center;
+    padding: 0px 0px 5px 0px;
+    margin: 0;
+    text-align: center;
 }
 #comic_info {
-    padding:3px 8px;
-	background:white;
-	border:1px solid gray;
-	border-radius:8px;
-	min-height:200px;
+    padding: 3px 8px;
+    background: white;
+    border: 1px solid gray;
+    border-radius: 8px;
+    min-height: 200px;
 }
 #comic_info h3 {
-	margin:5px 0;
-	padding:0;
+    margin: 5px 0;
+    padding: 0;
 }
 #comic_info h4 {
-	margin:0;
-	padding:0;
+    margin: 0;
+    padding: 0;
 }
 #comic_info p {
-    margin:2px 5px;
+    margin: 2px 5px;
 }
 #comic_info_wrap {
-/* 	margin-left:1em; */
+    /* 	margin-left:1em; */
 }
 #hover_notice {
-	text-align:center;
+    text-align: center;
 }
 input.filter {
-	background:white;
-	color:#666;
-	width:180px;
-    font-size:smaller;
+    background: white;
+    color: #666;
+    width: 180px;
+    font-size: smaller;
 }
 #comic_image {
-	margin:0;
-	padding:0;
-	text-align:center;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
 #comic_image img {
-	margin:0;
-	padding:0;
+    margin: 0;
+    padding: 0;
 }
 
 /****************/
@@ -484,111 +563,109 @@ input.filter {
 /****************/
 
 #request_list {
-    width:95%;
-    margin:0px auto 0px auto;
-    text-align:left;
+    width: 95%;
+    margin: 0px auto 0px auto;
+    text-align: left;
 }
 #request_list ul {
-    list-style-type:none;
-    margin:0;
-    padding:0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 #request_list li {
-    margin:0;
-    margin-left:30px;
-    padding:0;
-    font-weight:bold;
+    margin: 0;
+    margin-left: 30px;
+    padding: 0;
+    font-weight: bold;
 }
 #request_list li.first_line {
-    margin-left:5px;
-    font-weight:normal;
+    margin-left: 5px;
+    font-weight: normal;
 }
 #request_list li img {
-    vertical-align:middle;
-    position:relative;
-    top:-1px;
+    vertical-align: middle;
+    position: relative;
+    top: -1px;
 }
-#request_new, #request_new form {
-    margin-left:15px;
+#request_new,
+#request_new form {
+    margin-left: 15px;
 }
 #request_list li p {
-    font-weight:normal;
-    margin:0;
-    margin-left:15px;
-    padding:0;
+    font-weight: normal;
+    margin: 0;
+    margin-left: 15px;
+    padding: 0;
 }
 #thanks {
-    font-weight:bolder;
-    border:1px solid gray;
-    background-color:#BEFFB8;
-    border-radius:5px;
-    padding:3px 6px;
-    width:300px;
-    margin-top:1em;
+    font-weight: bolder;
+    border: 1px solid gray;
+    background-color: #beffb8;
+    border-radius: 5px;
+    padding: 3px 6px;
+    width: 300px;
+    margin-top: 1em;
 }
 #no_request_list {
-	position:relative;
-	padding:5px;
+    position: relative;
+    padding: 5px;
 }
 #no_request_list li {
-	float:left;
-	font-weight: normal;
-	min-width:220px;
-	margin-top:5px;
+    float: left;
+    font-weight: normal;
+    min-width: 220px;
+    margin-top: 5px;
 }
 /********/
 /* Blog */
 /********/
 
 #blog_wrapper {
-    width:95%;
-    margin:0px auto 0px auto;
-    text-align:left;
+    text-align: left;
 }
 #blog {
-    margin-right:200px;
+    margin-right: 200px;
 }
 #blog div.news_info {
-    margin:5px;
-    font-size:smaller;
-    color:gray;
+    margin: 5px;
+    font-size: smaller;
+    color: gray;
 }
 #blog .post {
-    padding:4px;
-    margin:0px 10px 10px 0px;
-    border-radius:5px;
+    padding: 4px;
+    margin: 0px 10px 10px 0px;
+    border-radius: 5px;
 }
 #blog .new_post {
-    background-color:#F4F4E9;
+    background-color: #f4f4e9;
 }
 #blog .post h4 {
-    margin:0px 0px 10px 0px;
+    margin: 0px 0px 10px 0px;
 }
 #blog .post img {
-    vertical-align:middle;
+    vertical-align: middle;
 }
 #blog .post .text {
-    margin-left:18px;
+    margin-left: 18px;
 }
 #blog_side {
-    float:right;
-    width:200px;
+    float: right;
+    width: 200px;
 }
 #blog_side ul {
-    margin:0;
-    padding:0 0 0 20px;
+    margin: 0;
+    padding: 0 0 0 20px;
 }
 #blog_side .all_link {
-    text-align:center;
+    text-align: center;
 }
-
 
 /***********/
 /* Contact */
 /***********/
 
-#contact img {
-    vertical-align:middle;
-    position:relative;
-    top:-1px;
+.vm {
+    vertical-align: middle;
+    position: relative;
+    top: -1px;
 }
