View now deletes users. Throw error if superuser.

--- a/src/comicagg/static/base/css/base.css
+++ b/src/comicagg/static/base/css/base.css
@@ -93,6 +93,10 @@ button:hover {
 
 .red { color: red }
 
+input.btn {
+    padding: 5px 10px;
+}
+
 /****************/
 /* Cookie notice*/
 /****************/
