Custom error pages added

--- a/src/comicagg/static/base/css/base.css
+++ b/src/comicagg/static/base/css/base.css
@@ -35,6 +35,9 @@ a:visited {
 .bolder {
     font-weight: bolder;
 }
+.b {
+    font-weight: bolder;
+}
 #content {
     margin-top: 40px;
     padding: 0em 2em;
@@ -92,6 +95,8 @@ button:hover {
 }
 
 .red { color: red }
+
+.lrg { font-size: larger }
 
 input.btn {
     padding: 5px 10px;
