--- a/src/comicagg/templates/accounts/delete_account_form.html
+++ b/src/comicagg/templates/accounts/delete_account_form.html
@@ -19,7 +19,7 @@
         <td>{{ form.confirmation }}</td>
       </tr>
     </table>
-    <div class="text_center">
+    <div class="center mt15px">
       <input type="submit" value="{% trans 'Delete my account'%}" class="btn"/>
     </div>
   </form>
