--- a/src/comicagg/templates/base.html
+++ b/src/comicagg/templates/base.html
@@ -72,7 +72,7 @@
       {% if messages %}
       <ul class="messages">
           {% for message in messages %}
-          <li class="{{ message.tags }}">{{ message.tags }}: {{ message }}</li>
+          <li class="{{ message.tags }}">{{ message }}</li>
           {% endfor %}
       </ul>
       {% endif %}
