--- a/src/comicagg/templates/accounts/password_reset_done.html
+++ b/src/comicagg/templates/accounts/password_reset_done.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="loginbox">
   <h3>{% trans 'Password reset'%}</h3>
-  <p class="info">{% trans 'If you provided a correct username or e-mail, an e-mail has been sent to the associated e-mail address.<br/>You will find your new password in it.'%}</p>
-  <p class="info">{% trans "If you don't receive any e-mail in the next minutes, try again reseting the password."%}</p>
+  <p class="info">{% trans 'If you provided a correct username or e-mail, you should be receving an e-mail shortly.<br/>You will find a password reset link in it.'%}</p>
+  <p class="info">{% trans "If you don't receive any e-mail in the following minutes, you may try again."%}</p>
 </div>
 {% endblock %}
