--- a/src/comicagg/templates/accounts/password_reset_form.html
+++ b/src/comicagg/templates/accounts/password_reset_form.html
@@ -7,13 +7,13 @@
   <p class="info">{% trans 'Please enter your username or e-mail address and we will send you a new password via e-mail.'%}</p>
   <br/>
   <form action="{% url 'accounts:password_reset' %}" method="post">{% csrf_token %}
-    <table>
-      <tr {% if form.username_or_password.errors %}class="error_tr"{% endif %}>
+    <table class="mc">
+      <tr {% if form.email.errors %}class="error_tr"{% endif %}>
         <td><label>{% trans 'Your username or email'%}</label></td>
-        <td>{{ form.username_or_password }}</td>
-  {% if form.username_or_password.errors %}
-    <td>{{ form.username_or_password.errors }}</td>
-  {% endif %}
+        <td>{{ form.email }}</td>
+      {% if form.email.errors %}
+        <tr><td>{{ form.email.errors }}</td></tr>
+      {% endif %}
       </tr>
     </table>
     <p><input type="submit" value="{% trans 'Reset my password'%}" />, <a href="{% url 'index' %}">{% trans 'or go back'%}</a></p>
