--- a/src/comicagg/templates/accounts/password_reset_email.html
+++ b/src/comicagg/templates/accounts/password_reset_email.html
@@ -1,13 +1,6 @@
 {% load i18n %}
-{% trans "You're receiving this e-mail because you requested a password reset" %}
-{% blocktrans %}for your user account at {{ site_name }}{% endblocktrans %}.
+{% trans 'You are receiving this e-mail because you or someone else requested a password reset for your user account at' %} {{ site_name }}.
 
-{% blocktrans %}Your new password is: {{ new_password }}{% endblocktrans %}
-
-{% trans "Feel free to change this password by going to this page:" %} {{ domain }}{% url "accounts:password_change" %}
-
-{% trans "Your username, in case you've forgotten:" %} {{ user.username }}
-
-{% trans "Thanks for using our site!" %}
+{% trans 'Follow this link to reset the password:' %} {{ protocol }}://{{ domain }}{% url 'accounts:password_reset_confirm' uidb64=uid token=token %}
 
 {% blocktrans %}The {{ site_name }} team{% endblocktrans %}
