Send emails on account changes

--- a/src/comicagg/templates/accounts/email_change_form.html
+++ b/src/comicagg/templates/accounts/email_change_form.html
@@ -31,7 +31,7 @@
         {% endif %}
       </tr>
     </table>
-    <div class="text_center"><input type="submit" value="{% trans 'Change it'%}" /></div>
+    <div class="text_center"><input type="submit" value="{% trans 'Save'%}" /></div>
   </form>
   <br />
   <a href="{% url 'accounts:profile' %}">{% trans 'Go back.'%}</a>
