--- a/src/comicagg/templates/accounts/password_reset_email.html
+++ b/src/comicagg/templates/accounts/password_reset_email.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% trans 'You are receiving this e-mail because you or someone else requested a password reset for your user account at' %} {{ site_name }}.
+{% trans 'You are receiving this notification because you or someone else requested a password reset for your user account at' %} {{ site_name }}.
 
 {% trans 'Follow this link to reset the password:' %} {{ protocol }}://{{ domain }}{% url 'accounts:password_reset_confirm' uidb64=uid token=token %}
 
