--- a/src/comicagg/templates/accounts/delete_account_email.html
+++ b/src/comicagg/templates/accounts/delete_account_email.html
@@ -1,3 +1,3 @@
-{% load i18n %}{% blocktrans %}You are receiving this e-mail to confirm that your account at {{ site_name }} has been deleted.{% endblocktrans %}
+{% load i18n %}{% blocktrans %}You are receiving this notification to confirm that your account at {{ site_name }} has been deleted.{% endblocktrans %}
 
 {% blocktrans %}The {{ site_name }} team{% endblocktrans %}
