--- a/src/comicagg/templates/accounts/register_email.html
+++ b/src/comicagg/templates/accounts/register_email.html
@@ -1,4 +1,4 @@
-{% load i18n %}{% blocktrans %}You are receiving this e-mail because this e-mail address has been used in a new account at {{ site_name }}.{% endblocktrans %}
+{% load i18n %}{% blocktrans %}You are receiving this notification because this e-mail address has been used in a new account at {{ site_name }}.{% endblocktrans %}
 
 {% blocktrans %}You can log in now using the username "{{ username }}": {{ site_url }}{% endblocktrans %}
 
