Update account forms to extend generic views

--- a/src/comicagg/templates/accounts/password_change_form.html
+++ b/src/comicagg/templates/accounts/password_change_form.html
@@ -38,7 +38,7 @@
   {% endif %}
       </tr>
     </table>
-    <input type="submit" value="{% trans 'Change it'%}" />
+    <input type="submit" value="{% trans 'Save'%}" />
   </form>
   <br />
   <p>{% trans "If you can't remember your current password, use the password reset page" %} <a href="{% url 'accounts:password_reset' %}">{% trans "here" %}</a></p>
